@@ -479,6 +479,9 @@ Release 2.1.0-beta - 2013-07-02
 
     HDFS-4602. TestBookKeeperHACheckpoints fails. (umamahesh)
 
+    HDFS-5016. Deadlock in pipeline recovery causes Datanode to be marked dead.
+    (suresh)
+
   BREAKDOWN OF HDFS-347 SUBTASKS AND RELATED JIRAS
 
     HDFS-4353. Encapsulate connections to peers in Peer and PeerServer classes.
